[tool.poetry]
name = "learnerchat"
version = "0.1.0"
description = ""
authors = ["SHGroup <kshgroup@kshgroup.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.1"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pyjwt = "^2.8.0"
python-decouple = "^3.8"
aiomysql = "^0.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
cryptography = "^42.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
